# dibble

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  setup.md
docs/: CHANGELOG.md  pilot-consent-template.md
evals/: content_quality_golden_corpus.json
frontend/: README.md  components.json  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
planning/: 2026-04-20-dibble-harness-implementation-plan.md  2026-04-20-dibble-harness-poc.md  2026-04-22-dibble-proof-and-pilot-plan.md  2026-05-05-risk-register.md  2026-05-07-risk-reduction-execution-plan.md  2026-06-08-diagram-quality-direction.md  2026-06-08-knowledge-tracing-and-mastery-model.md  2026-06-08-modality-preference-depth-assessment.md  2026-06-08-retention-scheduler-design.md  2026-06-08-risk-reduction-implementation-plan.md  DIBBLE_POC_ROADMAP_Jun102026.md  README.md  back-end-work-plan.md  classroom-course-relationship-refactor-plan.md  current-backend-gap-analysis.md  curriculum-loading-implementation-plan.md  from-front-to-back-needs.md  front-end-work-plan.md  lms-interface-plan.md
proof-artifacts/: shared-library-clean-dry-run.json  shared-library-clean-dry-run.md
scripts/: backup_database.sh  container_healthcheck.py  corpus_retrieval_spotcheck.py  hard_delete_learner.py  ingest_curriculum.py  live_household_proof.py  rehearse_proof_scenarios.py  run_content_quality_eval.py  seed_alberta_math7.py  validate_proof_scenarios.py
tests/: __init__.py  api_support.py  conftest.py  fake_plugins.py  support.py  test_active_loop_harnesses.py  test_admin_config.py  (+123 more)
(+522 files in other folders)
